# DJV

./: .gitignore  .gitmodules  CMakeLists.txt  ChangeLog.md  README.md  djvConfig.cmake.in  package-linux.sh  package-macos.sh  package-win.bat  sanitize.sh  sbuild-linux.sh  sbuild-macos.sh  sbuild-win.bat
.github/workflows/: ci-workflow.yml  pages.yml
cmake/Modules/: Package.cmake  macOSAppSign.cmake  macOSPackageSign.cmake  usdPluginsSymlink.cmake
docs/: Gemfile  _config.yml  audio.md  automation.md  color.md  compare.md  export.md  files.md  index.md  install.md  main-window.md  media-compatibility.md  playback.md  settings.md  timeline.md  tools.md  troubleshooting.md  view.md  viewport.md
etc/: sanitizer-suppressions.txt
etc/Legal/: CMakeLists.txt
etc/Linux/: linux-build-gha.sh  linux-build.sh  linux-package.sh  linux-sbuild.sh  sbuild.sh
etc/SampleData/: CMakeLists.txt  Counter.otio  Cubes.0001.exr  MultipleClips.otio
etc/Screenshots/: build_screenshots.py  make_svg.py  notes.txt  screenshots.json
etc/SuperBuild/: CMakeLists.txt
etc/SuperBuild/cmake/Modules/: BuildtlRender.cmake
etc/Windows/: sbuild.bat  windows-build-gha.bat  windows-build.bat  windows-package.bat  windows-sbuild.bat
etc/macOS/: DJV.icns  Info.plist.in  icon.sh  macos-build-gha.sh  macos-build.sh  macos-package.sh  macos-sbuild.sh  notarize.txt  sbuild.sh
lib/djv/: CMakeLists.txt
lib/djv/App/: App.cpp  App.h  AudioActions.cpp  AudioActions.h  AudioMenu.cpp  AudioPopup.cpp  AudioTool.cpp  AudioTool.h  BottomToolBar.cpp  BottomToolBar.h  CMakeLists.txt  Capture.cpp  Capture.h  ColorActions.cpp  ColorActions.h  ColorMenu.cpp  ColorPickerTool.cpp  ColorPickerTool.h  ColorTool.cpp  ColorTool.h  ColorToolPrivate.h  CompareActions.cpp  CompareActions.h  CompareMenu.cpp  CompareMenu.h  CompareToolBar.cpp  DevicesTool.cpp  DevicesTool.h  DiagTool.cpp  DiagTool.h  ExportTool.cpp  ExportTool.h  ExportWidgets.cpp  ExportWidgets.h  FileActions.cpp  FileActions.h  FileButton.cpp  FileMenu.cpp  FileMenu.h  FileToolBar.cpp  (+68 more)
lib/djv/Core/: CMakeLists.txt  Shortcuts.cpp  Shortcuts.h
lib/djv/Models/: AppInfoModel.cpp  AppInfoModel.h  AudioModel.cpp  AudioModel.h  BMDDevicesModel.cpp  BMDDevicesModel.h  CMakeLists.txt  ColorModel.cpp  ColorModel.h  CommandsModel.cpp  CommandsModel.h  FilesModel.cpp  FilesModel.h  OCIOModel.cpp  OCIOModel.h  RecentFilesModel.cpp  RecentFilesModel.h  SettingsModel.cpp  SettingsModel.h  Shortcuts.cpp  Shortcuts.h  TimeUnitsModel.cpp  TimeUnitsModel.h  ToolsModel.cpp  ToolsModel.h  Version.h  ViewportModel.cpp  ViewportModel.h
lib/djv/ModelsTest/: AudioModelTest.cpp  AudioModelTest.h  CMakeLists.txt  FilesModelTest.cpp  FilesModelTest.h  ModelsTestUtil.h  RecentFilesModelTest.cpp  RecentFilesModelTest.h  TimeUnitsModelTest.cpp  TimeUnitsModelTest.h  ToolsModelTest.cpp  ToolsModelTest.h  ViewportModelTest.cpp  ViewportModelTest.h
lib/djv/Resource/: CMakeLists.txt
lib/djv/UI/: AboutDialog.cpp  AboutDialog.h  AudioPopup.cpp  AudioPopup.h  CMakeLists.txt  ColorWidgets.cpp  ColorWidgets.h  FileButton.cpp  FileButton.h  FileThumbnail.cpp  FileThumbnail.h  ScreenshotTag.h  SeparateAudioDialog.cpp  SeparateAudioDialog.h  SeparateAudioWidget.cpp  SettingsWidgets.cpp  SettingsWidgets.h  SetupDialog.cpp  SetupDialog.h  ShortcutsWidget.cpp  SpeedPopup.cpp  SpeedPopup.h  StatusIndicatorPopup.cpp  StatusIndicatorPopup.h  StyleWidget.cpp  SysInfoDialog.cpp  SysInfoDialog.h  ViewWidgets.cpp  ViewWidgets.h
lib/djvApp/: App.cpp  App.h  CMakeLists.txt  MainWindow.cpp  MainWindow.h  SecondaryWindow.cpp  SecondaryWindow.h  Shortcuts.cpp  Shortcuts.h
lib/djvApp/Actions/: AudioActions.cpp  ColorActions.cpp  CompareActions.cpp  FileActions.cpp  FrameActions.cpp  HelpActions.cpp  IActions.cpp  PlaybackActions.cpp  PlaybackActions.h  TimelineActions.cpp  ToolsActions.cpp  ViewActions.cpp  WindowActions.cpp
lib/djvApp/Menus/: CompareMenu.cpp  FileMenu.cpp  HelpMenu.cpp  TimelineMenu.cpp  WindowMenu.cpp
lib/djvApp/Models/: AudioModel.cpp  AudioModel.h  BMDDevicesModel.h  ColorModel.cpp  ColorModel.h  FilesModel.cpp  FilesModel.h  OCIOModel.cpp  OCIOModel.h  SettingsModel.cpp  SettingsModel.h  TimeUnitsModel.cpp  TimeUnitsModel.h  ToolsModel.cpp  ToolsModel.h  ViewportModel.cpp  ViewportModel.h
lib/djvApp/Tools/: AudioTool.cpp  ColorPickerTool.cpp  ColorPickerTool.h  ColorTool.cpp  ColorToolPrivate.h  DevicesTool.cpp  DiagTool.cpp  DiagTool.h  ExportTool.cpp  FileButton.cpp  FilesTool.cpp  FilesTool.h  FilesToolPrivate.h  IToolWidget.cpp  IToolWidget.h  InfoTool.cpp  InfoTool.h  MagnifyTool.cpp  MagnifyTool.h  MessagesTool.cpp  SettingsTool.cpp  SettingsToolPrivate.h  ShortcutsWidget.cpp  StyleWidget.cpp  SysLogTool.cpp  SysLogTool.h  SystemLogTool.cpp  ToolsWidget.cpp  ToolsWidget.h  ViewTool.cpp  ViewToolPrivate.h
lib/djvApp/Widgets/: AboutDialog.cpp  AudioPopup.cpp  BottomToolBar.cpp  BottomToolBar.h  CompareToolBar.cpp  FileToolBar.cpp  SeparateAudioDialog.h  SeparateAudioWidget.cpp  SetupDialog.cpp  SetupDialog.h  ShuttleWidget.cpp  ShuttleWidget.h  SpeedPopup.cpp  SpeedPopup.h  StatusBar.cpp  StatusBar.h  SysInfoDialog.cpp  SysInfoDialog.h  TabBar.cpp  TabBar.h  ToolsToolBar.cpp  ViewToolBar.cpp  Viewport.cpp  Viewport.h  WindowToolBar.cpp
lib/djvResource/: CMakeLists.txt
tests/: CMakeLists.txt  RelativeViewTest.cpp
tests/djv-test/: CMakeLists.txt  djv-test.cpp  djv-test.h  main.cpp
tests/media-compat/: README.md  media_compat.py
